Mark the canvas texture dirty when we change it.

Because the texture is the same instance and the rect is the same,
the early-out checks in QSGSimpleTextureNode will abort.

Task-number: QTBUG-30666
Change-Id: I0e6a1fd3d4de33436057e8cdf62dc0e7964b5c21
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>